Fix text wrap

--- a/sunnyside-agency-landing-page/src/styles/reset.css
+++ b/sunnyside-agency-landing-page/src/styles/reset.css
@@ -52,12 +52,12 @@ label {
 }
 
 /* Balance text wrapping on headings */
-h1,
+/* h1,
 h2,
 h3,
 h4 {
   text-wrap: balance;
-}
+} */
 
 /* A elements that don't have a class get default styles */
 a:not([class]) {
